fix rendering issues on mobile

--- a/src/scss/dark/index.scss
+++ b/src/scss/dark/index.scss
@@ -1,2 +1,12 @@
 @import "./undead.scss";
 @import "./nightelf.scss";
+
+
+.theme--dark {
+    .custom-table{
+    
+        td {
+          border-bottom: thin solid hsla(0,0%,100%,.12);
+        }
+      }
+}
