--- a/src/scss/light/index.scss
+++ b/src/scss/light/index.scss
@@ -1,2 +1,11 @@
 @import "./human.scss";
 @import "./orc.scss";
+
+.theme--light {
+    .custom-table{
+    
+        td {
+         border-bottom: thin solid rgba(0,0,0,.12);
+        }
+      }
+}
